erDiagram
    Fighter {
        string Name PK "Primary Key"
        string Height "Nullable, in format ft'in''"
        string Weight "Nullable, in lbs"
        string Reach "Nullable, in inches"
        string Stance "Nullable, can be Orthodox, Southpaw, etc."
        date DOB "Nullable, Date of Birth"
    }

    Fight {
        string ID PK "Primary Key, Composite of fighters' names and date"
        date Date "Date when the fight took place"
        string Location "Location where the fight took place"
        string Format "Format of the fight, e.g., number of rounds"
        string Referee "Name of the referee"
        string Fight_type "Type of the fight, e.g., weight class"
        string Winner "Name of the winner"
        string win_by "Method of victory"
        int last_round "The last round of the fight"
        string last_round_time "Time when the last round ended"
    }

    PerformanceMetrics {
        string ID PK "Primary Key, Composite of Fight ID and fighter"
        int R_KD "Red corner Knockdowns"
        int B_KD "Blue corner Knockdowns"
        string R_SIG_STR "Red corner Significant Strikes"
        string B_SIG_STR "Blue corner Significant Strikes"
        string R_SIG_STR_pct "Red corner Significant Strikes Percentage"
        string B_SIG_STR_pct "Blue corner Significant Strikes Percentage"
        string R_TOTAL_STR "Red corner Total Strikes"
        string B_TOTAL_STR "Blue corner Total Strikes"
        string R_TD "Red corner Takedowns"
        string B_TD "Blue corner Takedowns"
        string R_TD_pct "Red corner Takedown Percentage"
        string B_TD_pct "Blue corner Takedown Percentage"
        int R_SUB_ATT "Red corner Submission Attempts"
        int B_SUB_ATT "Blue corner Submission Attempts"
        int R_REV "Red corner Reversals"
        int B_REV "Blue corner Reversals"
        string R_CTRL "Red corner Control Time"
        string B_CTRL "Blue corner Control Time"
    }

    Fighter ||--o{ Fight : "participates_in"
    Fight ||--|| PerformanceMetrics : "is_recorded_in"
    PerformanceMetrics }|--|| Fighter : "is_attributed_to"
